--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Devfolio">
+		<meta name="keywords" content="Svelte, Daisyui, Tailwindcss, Vite">
+		<meta name="author" content="Helitha Rupasinghe">
     <title>Devfolio</title>
         <!--GoogleFonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
